[package]
name = "ACME-IC-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
candid = "0.10"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-http-certification = "3.0.3"
ic-stable-structures = "0.6.8"
k256 = { version = "0.13.4", features = ["alloc", "ecdsa"] }
matchit = "0.8.6"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
signature = { version = "2.2.0", features = ["alloc"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
x509-cert = { version = "0.2.5", features = ["builder", "pem", "signature"] }

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[features]
default = ["local"]
local = []
staging = []
prod = []
